[tool.poetry]
name = "led-cube-view"
version = "0.1.0"
description = ""
authors = ["crash8229 <mu304007@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "led_cube_view"}]

[tool.poetry.dependencies]
python = "^3.10"
PySide6 = {version = "^6.3.1", python = ">=3.10,<3.11"}
PyOpenGL = "^3.1.6"
numpy-stl = "^2.17.1"
pyqtgraph = "^0.13.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pyinstaller = {version = "^5.4", python = ">=3.10,<3.11"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
